--- a/ManejoGastosMensuales/app/src/main/res/menu/exit_menu.xml
+++ b/ManejoGastosMensuales/app/src/main/res/menu/exit_menu.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/exit_menu"
+        android:id="@+id/exit_menu_item"
+        android:icon="@android:drawable/ic_notification_clear_all"
         android:title="Exit"
         app:showAsAction="never"/>
 </menu>
