--- a/ManejoGastosMensuales/app/src/main/res/layout/listview_cardview_item.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/listview_cardview_item.xml
@@ -3,18 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
         android:id="@+id/CardView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        card_view:cardCornerRadius="4dp"
+        android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        card_view:cardBackgroundColor="#E2E2E2">
+        card_view:cardBackgroundColor="#E2E2E2"
+        card_view:cardCornerRadius="4dp"
+        android:layout_margin="16dp">
 
         <ImageView
             android:id="@+id/imageViewCategory"
@@ -30,38 +30,38 @@
                 android:id="@+id/tvCategoryName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:text="NombreCategoria"
-                android:textAppearance="?attr/textAppearanceLargePopupMenu"
                 android:layout_alignBottom="@+id/textView2"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="12dp"
+                android:text="NombreCategoria"
+                android:textAppearance="?attr/textAppearanceLargePopupMenu" />
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|bottom"
-                android:text="$"
-                android:textAppearance="?attr/textAppearanceLargePopupMenu"
                 android:layout_alignBaseline="@+id/tvValorCantidad"
                 android:layout_alignBottom="@+id/tvValorCantidad"
+                android:layout_gravity="right|bottom"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
                 android:layout_toLeftOf="@+id/tvValorCantidad"
                 android:layout_toStartOf="@+id/tvValorCantidad"
-                android:layout_marginRight="12dp"
-                android:layout_marginEnd="12dp" />
+                android:text="$"
+                android:textAppearance="?attr/textAppearanceLargePopupMenu" />
 
             <TextView
                 android:id="@+id/tvValorCantidad"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="0.0"
-                android:textAppearance="?attr/textAppearanceLargePopupMenu"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginEnd="10dp" />
+                android:hint="0.0"
+                android:textAppearance="?attr/textAppearanceLargePopupMenu" />
 
         </RelativeLayout>
 
