--- a/ManejoGastosMensuales/app/src/main/res/layout/fragment_main.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,4 @@
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,19 +13,19 @@
 
     -->
 
-   <android.support.v7.widget.RecyclerView
-       android:id="@+id/recyclerViewCategorias"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:paddingBottom="70dp"
-       android:clipToPadding="false"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewCategorias"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="70dp" />
 
-<android.support.design.widget.FloatingActionButton
-   android:id="@+id/fabAddCategory"
-   android:layout_width="wrap_content"
-   android:layout_height="wrap_content"
-   android:layout_gravity="bottom|end"
-   android:layout_margin="16dp"
-   android:src="@mipmap/ic_add_fab"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabAddCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:src="@mipmap/ic_add_fab" />
 
 </android.support.design.widget.CoordinatorLayout>
