--- a/ManejoGastosMensuales/app/src/main/res/layout/listview_cardview_item.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/listview_cardview_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,12 +8,12 @@
         android:id="@+id/CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         card_view:cardBackgroundColor="#E2E2E2"
-        card_view:cardCornerRadius="4dp"
-        android:layout_margin="16dp">
+        card_view:cardCornerRadius="4dp">
 
         <ImageView
             android:id="@+id/imageViewCategory"
