--- a/ManejoGastosMensuales/app/src/main/res/layout/recycler_cardview_item.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/recycler_cardview_item.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/CardView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     android:layout_margin="16dp"
     android:clickable="true"
     android:focusable="true"
