--- a/ManejoGastosMensuales/app/src/main/res/layout/category_detailed_item.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/category_detailed_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -22,7 +23,10 @@
                 android:id="@+id/detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="nombre del detalle" />
+                android:freezesText="true"
+                android:hint="nombre del detalle"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/date"
