--- a/ManejoGastosMensuales/app/src/main/res/layout/activity_define_categories.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/activity_define_categories.xml
@@ -12,17 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <include android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
 
-    <ListView
-        android:id="@+id/listviewDefineCategories"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
-        android:divider="@null"
-        android:clipToPadding="false"
-        android:paddingBottom="70dp"/>
+        <ListView
+            android:id="@+id/listviewDefineCategories"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar"
+            android:clipToPadding="false"
+            android:divider="@null"
+            android:paddingBottom="70dp" />
+
 
     </RelativeLayout>
 
@@ -32,6 +34,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@mipmap/ic_add_fab" />
+        app:srcCompat="@mipmap/ic_add_fab"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="25dp" />
+
 
 </android.support.design.widget.CoordinatorLayout>
