--- a/ManejoGastosMensuales/app/src/main/res/menu/nav_options.xml
+++ b/ManejoGastosMensuales/app/src/main/res/menu/nav_options.xml
@@ -14,6 +14,11 @@
             android:title="Define start of Month"/>
 
         <item
+            android:id="@+id/currency"
+            android:icon="@drawable/ic_currency"
+            android:title="Set currency"/>
+
+        <item
             android:id="@+id/menu_none"
             android:title=""
             android:visible="false"/>
