--- a/ManejoGastosMensuales/app/src/main/res/layout/fragment_main.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/fragment_main.xml
@@ -11,9 +11,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/textView2"
-            android:layout_toLeftOf="@+id/textView2"
-            android:layout_toStartOf="@+id/textView2"
+            android:layout_alignBottom="@+id/tvCurrency"
+            android:layout_toLeftOf="@+id/tvCurrency"
+            android:layout_toStartOf="@+id/tvCurrency"
             android:layout_marginEnd="12dp"
             android:layout_marginRight="12dp"
             android:text="Total"
@@ -21,7 +21,7 @@
 
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tvCurrency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/tvTotalTotal"
@@ -31,7 +31,6 @@
             android:layout_marginRight="12dp"
             android:layout_toLeftOf="@+id/tvTotalTotal"
             android:layout_toStartOf="@+id/tvTotalTotal"
-            android:text="$"
             android:textAppearance="?attr/textAppearanceLargePopupMenu" />
 
         <TextView
