--- a/ManejoGastosMensuales/app/src/main/res/layout/fragment_main.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/fragment_main.xml
@@ -1,4 +1,5 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,54 +7,61 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tvCurrency"
-            android:layout_toLeftOf="@+id/tvCurrency"
-            android:layout_toStartOf="@+id/tvCurrency"
-            android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp"
-            android:text="Total"
-            android:textAppearance="?attr/textAppearanceLargePopupMenu" />
+        <RelativeLayout
+            android:layout_marginTop="5dp"
+            android:id="@+id/relativeLayoutExternal"
+            android:layout_width="match_parent"
+            android:layout_height="30dp">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/tvCurrency"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_toLeftOf="@+id/tvCurrency"
+                android:layout_toStartOf="@+id/tvCurrency"
+                android:text="Total"
+                android:textAppearance="?attr/textAppearanceLargePopupMenu" />
 
-        <TextView
-            android:id="@+id/tvCurrency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tvTotalTotal"
-            android:layout_alignBottom="@+id/tvTotalTotal"
-            android:layout_gravity="right|bottom"
-            android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_toLeftOf="@+id/tvTotalTotal"
-            android:layout_toStartOf="@+id/tvTotalTotal"
-            android:textAppearance="?attr/textAppearanceLargePopupMenu" />
+            <TextView
+                android:id="@+id/tvCurrency"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/tvTotalTotal"
+                android:layout_alignBottom="@+id/tvTotalTotal"
+                android:layout_gravity="right|bottom"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_toLeftOf="@+id/tvTotalTotal"
+                android:layout_toStartOf="@+id/tvTotalTotal"
+                android:textAppearance="?attr/textAppearanceLargePopupMenu" />
 
-        <TextView
-            android:id="@+id/tvTotalTotal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:hint="0.0"
-            android:textAppearance="?attr/textAppearanceLargePopupMenu" />
+            <TextView
+                android:id="@+id/tvTotalTotal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:hint="0.0"
+                android:textAppearance="?attr/textAppearanceLargePopupMenu" />
+
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerViewCategorias"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingBottom="70dp"
+            android:layout_below="@+id/relativeLayoutExternal"/>
 
     </RelativeLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewCategorias"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingBottom="70dp"
-        android:layout_marginTop="30dp"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabAddCategory"
