--- a/ManejoGastosMensuales/app/src/main/res/layout/fragment_history.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/fragment_history.xml
@@ -1,14 +1,109 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.santamaria.manejogastosmensuales.Fragments.HistoryFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Fragmento Historial"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_centerInParent="true" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_margin="16dp">
 
-</RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:gravity="center"
+                android:text="Month"
+                android:textAppearance="?attr/textAppearanceLargePopupMenu"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:gravity="center"
+                android:text="Year"
+                android:textAppearance="?attr/textAppearanceLargePopupMenu"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="5"
+                android:gravity="center"
+                android:layout_height="match_parent">
+
+                <!-- Month -->
+                <NumberPicker
+                    android:id="@+id/NumberPickerMonth"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="1dip"
+                    android:layout_marginStart="1dip"
+                    android:focusable="true"
+                    android:descendantFocusability="blocksDescendants"
+                    android:focusableInTouchMode="true" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="5"
+                android:gravity="center"
+                android:layout_height="match_parent">
+
+                <!-- Year -->
+                <NumberPicker
+                    android:id="@+id/NumberPickerYear"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="1dip"
+                    android:layout_marginStart="1dip"
+                    android:focusable="true"
+                    android:descendantFocusability="blocksDescendants"
+                    android:focusableInTouchMode="true" />
+
+                </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/cardview_dark_background"></LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/contentFrame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/currentMonthSelected"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Current Month in progress..."
+                android:visibility="invisible"
+                android:textAppearance="?attr/textAppearanceLargePopupMenu"/>
+        </FrameLayout>
+
+
+
+    </LinearLayout>
+
+</LinearLayout>
