--- a/ManejoGastosMensuales/app/src/main/res/layout/listview_cardview_item.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/listview_cardview_item.xml
@@ -7,7 +7,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/CardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_margin="16dp"
         android:foreground="?android:attr/selectableItemBackground"
         card_view:cardBackgroundColor="#E2E2E2"
