--- a/ManejoGastosMensuales/app/src/main/res/layout/dialog_create_category.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/dialog_create_category.xml
@@ -11,7 +11,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:layout_margin="15dp"
-        android:hint="Category Name"/>
+        android:hint="@string/dialog_Create_category_name_hint"/>
 
     <LinearLayout
         android:layout_width="match_parent"
