--- a/ManejoGastosMensuales/app/src/main/res/menu/exit_menu.xml
+++ b/ManejoGastosMensuales/app/src/main/res/menu/exit_menu.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/exit_menu_item"
         android:icon="@android:drawable/ic_notification_clear_all"
-        android:title="Exit"
+        android:title="@string/exit"
         app:showAsAction="never"/>
 </menu>
