--- a/ManejoGastosMensuales/app/src/main/res/menu/options_card_view_context_menu.xml
+++ b/ManejoGastosMensuales/app/src/main/res/menu/options_card_view_context_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/editCardView"
-        android:title="Edit Category" />
+        android:title="@string/option_card_view_context_menu_edit_category" />
 
     <item android:id="@+id/deleteCardView"
-        android:title="Delete Category" />
+        android:title="@string/option_card_view_context_menu_delete_category" />
 
 </menu>
