--- a/ManejoGastosMensuales/app/src/main/res/layout/fragment_last_month.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/fragment_last_month.xml
@@ -19,7 +19,7 @@
             android:layout_marginRight="12dp"
             android:layout_toLeftOf="@+id/tvCurrency"
             android:layout_toStartOf="@+id/tvCurrency"
-            android:text="Total"
+            android:text="@string/fragment_last_month_total_label"
             android:textAppearance="?attr/textAppearanceLargePopupMenu" />
 
         <TextView
