--- a/ManejoGastosMensuales/app/src/main/res/layout/recycler_cardview_item.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/recycler_cardview_item.xml
@@ -29,7 +29,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="12dp"
-            android:text="NombreCategoria"
+            android:hint="NombreCategoria"
             android:textAppearance="?attr/textAppearanceLargePopupMenu" />
 
         <TextView
