--- a/ManejoGastosMensuales/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/header_navigation_drawer.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="bottom"
-        android:text="Manejo Gastos Mensuales"
+        android:text="@string/nav_view_text_header"
         android:textAppearance="?attr/textAppearanceLargePopupMenu"
         android:textStyle="bold"
         android:layout_marginLeft="10dp"
