--- a/ManejoGastosMensuales/app/src/main/res/layout/dialog_define_category_item.xml
+++ b/ManejoGastosMensuales/app/src/main/res/layout/dialog_define_category_item.xml
@@ -12,4 +12,32 @@
         android:layout_margin="15dp"
         android:hint="@string/dialog_define_category_item_category_name_hint"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/dialog_create_category_color_label"/>
+
+        <ImageView
+            android:id="@+id/imageViewColors"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_color"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="1dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground" />
+
+    </LinearLayout>
+
 </LinearLayout>
+
