--- a/app/src/main/res/layout/activity_define_categories.xml
+++ b/app/src/main/res/layout/activity_define_categories.xml
@@ -23,20 +23,30 @@
             android:layout_below="@id/toolbar"
             android:clipToPadding="false"
             android:divider="@null"
-            android:paddingBottom="70dp" />
+            android:paddingBottom="70dp"
+            android:layout_above="@+id/adView"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_above="@+id/adView"
+            android:layout_margin="@dimen/fab_margin"
+            app:srcCompat="@mipmap/ic_add_fab" />
+
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id">
+        </com.google.android.gms.ads.AdView>
 
 
     </RelativeLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@mipmap/ic_add_fab"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="25dp" />
 
 
 </android.support.design.widget.CoordinatorLayout>
